[tool.poetry]
name = "celery-pubsub"
version = "2.0.0-beta3"
description = "A Publish and Subscribe library for Celery"
license = "MIT"
authors = ["Samuel GIFFARD <mulugruntz@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/Mulugruntz/celery-pubsub"
repository = "https://github.com/Mulugruntz/celery-pubsub"
keywords = ["celery", "publish", "subscribe", "pubsub"]
classifiers = [
        "Development Status :: 5 - Production/Stable",
        "Intended Audience :: Developers",
        "License :: OSI Approved :: MIT License",
        "Programming Language :: Python :: 3.7",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: Implementation :: CPython",
        "Programming Language :: Python :: Implementation :: PyPy",
        "Topic :: Software Development :: Libraries",
        "Topic :: System :: Distributed Computing",
        "Topic :: Utilities",
    ]

[tool.poetry.dependencies]
python = ">=3.7"
celery = ">=4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
