[metadata]
description-file = README.rst

[files]
extra_files =
    LICENSE


[pycodestyle]
max-line-length = 96

[flake8]
max-line-length = 96
exclude = build,dist,.git,

[isort]
line_length = 96
known_first_party = celery_pubsub
default_section = THIRDPARTY
combine_as_imports = 1
order_by_type = True
# black compatibility
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
